--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -375,14 +375,14 @@
 	<footer>
 		<div class="footer">
 			<section>
-				<p class="title">4DIMENSIONS LLC</p>
-				<p style="font-size:.8rem !important">
+				<p class="title p-margin ">4DIMENSIONS LLC</p>
+				<p class="p-margin " style="font-size:.8rem !important">
 					402 Rolling Green Ave
 				</p>
-				<p style="font-size:.8rem !important">
+				<p class="p-margin " style="font-size:.8rem !important">
 					 New Castle DE 19720
 				</p>
-				<p style="font-size:.8rem !important">
+				<p class="p-margin " style="font-size:.8rem !important">
 					UAN: +1 855 789 4DIM
 				</p>
 			</section>
@@ -458,7 +458,11 @@
 			<div class="modal-content mdl-height">
 				<div class="modal-header justify-content-center text-center">
 					<h2 class="modal-title lg-view" id="staticBackdropLabel">Contact</h2>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					<button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close" style="opacity: 1;"></button>
+
+					@* <button type="button" class="close btn-closed" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button> *@
 				</div>
 
 				<div class="modal-body">
@@ -474,7 +478,7 @@
 										<input type="text" id="father-name" placeholder="Father Name" />
 										<input type="date" id="dob" placeholder="Date Of Birth" />
 										<input type="number" id="contact" placeholder="Contact" />
-										<input type="email" id="email" placeholder="Email" />
+										<input type="email" pattern="^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Please enter a valid email address"id="email"  placeholder="Email" />
 										<textarea id="message" rows="4" placeholder="Message"></textarea>
 
 										<div class="like-container">
@@ -489,7 +493,7 @@
 										
 										<div class="button-container">
 											<button type="reset" class="btn-reset">Reset</button>
-											<button type="submit" class="btn-submit">Submit</button>
+											<button type="button" class="btn-submit">Submit</button>
 										
 										</div>
 									</form>
