--- a/4DimenssionLLC/Views/Home/Privacy.cshtml
+++ b/4DimenssionLLC/Views/Home/Privacy.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="main-heading">
+<h1 >@ViewData["Title"]</h1>
+</div>
+<iframe src="~/pdf/privacypolicy.pdf" class="pdf-style">
+ @*    <a href="~/pdf/privacypolicy.pdf">~/pdf/privacypolicy.pdf</a> *@
+    <p>Your browser does not support iframes.</p>
+</iframe>
