--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -398,7 +398,10 @@
 			<h1 class="faqsSetHead">Frequently Asked Questions</h1>
 			<div class="accordion-item">
 				<input type="checkbox" id="accordion1">
-				<label for="accordion1" class="accordion-item-title"><span class="icon"></span>What is SEO, and why is it important for online businesses?</label>
+				<label for="accordion1" class="accordion-item-title">
+					<span class="icon"></span>Where is 4Dimensions LLC located?
+
+				</label>
 				<div class="accordion-item-desc">SEO, or Search Engine Optimization, is the practice of optimizing a website to improve its visibility on search engines like Google. It involves various techniques to enhance a site's ranking in search results. SEO is crucial for online businesses as it helps drive organic traffic, increases visibility, and ultimately leads to higher conversions.</div>
 			</div>
 
@@ -455,8 +458,8 @@
 			<section class="sectionstyle">
 				<p class="title">SUPPORT</p>
 				<p><a href="#ServiceSection"></a></p>
-				<p><a target="_blank" href="@Url.Action("Privacy", "Home" )">Privacy Policy</a></p>
-				<p><a href="#">Company Policy</a></p>
+				<p><a >Privacy Policy</a></p>
+				<p><a target="_blank" href="@Url.Action("Privacy", "Home" )">Company Policy</a></p>
 				<p><a href="#Faqs">FAQS</a></p>
 
 			</section>
