--- a/4DimenssionLLC/Views/Home/Privacy.cshtml
+++ b/4DimenssionLLC/Views/Home/Privacy.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Company Policy";
 }
 <div class="main-heading">
 <h1 >@ViewData["Title"]</h1>
 </div>
 <iframe src="~/pdf/privacypolicy.pdf" class="pdf-style">
- @*    <a href="~/pdf/privacypolicy.pdf">~/pdf/privacypolicy.pdf</a> *@
+
     <p>Your browser does not support iframes.</p>
 </iframe>
