--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -419,31 +419,33 @@
 					<span class="icon"></span>Where is 4Dimensions LLC located?
 
 				</label>
-				<div class="accordion-item-desc">SEO, or Search Engine Optimization, is the practice of optimizing a website to improve its visibility on search engines like Google. It involves various techniques to enhance a site's ranking in search results. SEO is crucial for online businesses as it helps drive organic traffic, increases visibility, and ultimately leads to higher conversions.</div>
+				<div class="accordion-item-desc">
+					4Dimensions LLC is located at 402 Rolling Green Ave	New Castle DE, USA.
+				</div>
 			</div>
 
 			<div class="accordion-item">
 				<input type="checkbox" id="accordion2">
-				<label for="accordion2" class="accordion-item-title"><span class="icon"></span>How long does it take to see results from SEO efforts?</label>
-				<div class="accordion-item-desc">The timeline for seeing results from SEO can vary based on several factors, such as the competitiveness of keywords, the current state of the website, and the effectiveness of the SEO strategy. Generally, it may take several weeks to months before noticeable improvements occur. However, long-term commitment to SEO is essential for sustained success.</div>
+				<label for="accordion2" class="accordion-item-title"><span class="icon"></span>What are the channels to reach out 4Dimensions LLC team for help?</label>
+				<div class="accordion-item-desc">4Dimensions LLC, uses all modern era communication channels for example whatsapp, instgram, snapchat, facebook etc. Even on phone call we are available to serve our customers.</div>
 			</div>
 
 			<div class="accordion-item">
 				<input type="checkbox" id="accordion3">
-				<label for="accordion3" class="accordion-item-title"><span class="icon"></span>What are the key components of a successful SEO strategy?</label>
-				<div class="accordion-item-desc">A successful SEO strategy involves various components, including keyword research, on-page optimization, quality content creation, link building, technical SEO, and user experience optimization. These elements work together to improve a website's relevance and authority in the eyes of search engines.</div>
+				<label for="accordion3" class="accordion-item-title"><span class="icon"></span>Which payment channels are available for payments?</label>
+				<div class="accordion-item-desc">Electronic and online approx. all payment channels are supported. user can chose option as per convenience.</div>
 			</div>
 
 			<div class="accordion-item">
 				<input type="checkbox" id="accordion4">
-				<label for="accordion4" class="accordion-item-title"><span class="icon"></span>How does mobile optimization impact SEO?</label>
-				<div class="accordion-item-desc">Mobile optimization is crucial for SEO because search engines prioritize mobile-friendly websites. With the increasing use of smartphones, search engines like Google consider mobile responsiveness as a ranking factor. Websites that provide a seamless experience on mobile devices are more likely to rank higher in search results.</div>
+				<label for="accordion4" class="accordion-item-title"><span class="icon"></span>How can see likes & love expressions shown by valuable customers?</label>
+				<div class="accordion-item-desc">There is tabular and graph view of likes & love expressions, voted by 4Dimensions LLC website users.</div>
 			</div>
 
 			<div class="accordion-item">
 				<input type="checkbox" id="accordion5">
-				<label for="accordion5" class="accordion-item-title"><span class="icon"></span>What is the role of backlinks in SEO, and how can they be acquired?</label>
-				<div class="accordion-item-desc">Backlinks, or inbound links from other websites to yours, play a significant role in SEO. They are considered a vote of confidence and can improve a site's authority. Quality over quantity is crucial when acquiring backlinks. Strategies for obtaining backlinks include creating high-quality content, guest posting, reaching out to industry influencers, and participating in community activities. It's important to focus on natural and ethical link-building practices.</div>
+				<label for="accordion5" class="accordion-item-title"><span class="icon"></span>How one can submit like & love expression from website?</label>
+				<div class="accordion-item-desc">All website vistors can submit their like or love expression by click like | love icon from left side menu, to submit expression, must need to fill identification info.</div>
 			</div>
 
 		</div>
