--- a/4DimenssionLLC/Views/Home/Index.cshtml
+++ b/4DimenssionLLC/Views/Home/Index.cshtml
@@ -127,7 +127,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><span class="copnyNameStyle"> 4Dimensions LLC</span><img class="logo-width mbl-view" src="~/images/4dlogo.png" /></td>
+				<td>@* <span class="copnyNameStyle"> 4Dimensions LLC</span> *@<img class="logo-width mbl-view" src="~/images/4dlogo.png" /></td>
 			</tr>
 		</table>
 	</div>
@@ -140,7 +140,7 @@
 	<section class="section0" id="ServiceSection">
 		<div class="cardBannerWidth card banner">
 			<h1 class="title">Our Featured Services</h1>
-			<p class="sub-title float-left">
+			<p class=" float-left">
 				4Dimensions LLC, maintains reasonable fleet of delivery vans and delivery associates. To address sudden increase of delivery packages, we always run with back up of spare van &  delivery associate, big vans are dispatched with assistant as well. We periodicaly execute maintenance schedule of van so on time delivery can be assured and better health status achievement of delivery vans.
 			</p>
 		</div>
@@ -452,16 +452,18 @@
 	<!--FOOTER-->
 	<footer>
 		<div class="footer">
-			<section>
-				<p class="title p-margin ">4DIMENSIONS LLC</p>
-				<p class="p-margin " style="font-size:.8rem !important">
-					402 Rolling Green Ave
+			<section class="sectionstyle">
+				<p class="title ">4DIMENSIONS LLC</p>
+				<p class="" >
+					<a>402 Rolling Green Ave</a>
 				</p>
-				<p class="p-margin " style="font-size:.8rem !important">
-					 New Castle DE 19720
+				<p class=" " >
+					
+					<a> New Castle DE 19720</a>
 				</p>
-				<p class="p-margin " style="font-size:.8rem !important">
-					UAN: +1 855 789 4DIM
+				<p class="" >
+					<a>	UAN: +1 855 789 4DIM</a>
+				
 				</p>
 			</section>
 
