--- a/4DimenssionLLC/wwwroot/css/site.css
+++ b/4DimenssionLLC/wwwroot/css/site.css
@@ -476,7 +476,7 @@ header {
 }
 .main {
     width: 100%;
-    height: 110vh;
+    height: 100%;
     background-color: #13345b85;
     /*  padding-top: 7em;
     padding-left: 2em;
@@ -1821,6 +1821,12 @@ hr {
         font-family: 'Times New Roman';
         font-size: 1.4em;
     }
+    .copnyNameStyle {
+        font-size: 3em;
+        font-weight: 700;
+        margin-left: 7em!important;
+    }
+
     .sub-title{
         font-size:1.4em;
     }
@@ -1828,7 +1834,7 @@ hr {
         margin-left: -3.4em;
     }
     .icon {
-        display: none !important;
+       /* display: none !important;*/
     }
     .sub-title {
         font-size: 2em !important;
@@ -1842,6 +1848,9 @@ hr {
     p{
         font-size:1.7em!important;
     }
+   /* .p-margin {
+        margin-bottom: 1.3rem !important;
+    }*/
 }
 .icon{
   /*  display:none;*/
@@ -2161,7 +2170,7 @@ h2 {
     width:10em;
 }
 .p-margin {
-    margin-bottom: 0.5rem!important;
+    margin-bottom: 0.5rem;
 }
 .left-inner-container {
     height: 100%;
@@ -2417,8 +2426,8 @@ figure.snip1390 {
     position: relative;
     overflow: hidden;
     margin: 10px;
-    min-width: 230px;
-    max-width: 27em;
+  /*  min-width: 230px;
+    max-width: 27em;*/
     width: 100%;
     color: #000000;
     text-align: center;
@@ -2524,7 +2533,7 @@ figure.snip1390 blockquote {
     font-style: normal;
     position: absolute;
     bottom: -26px;
-    right: 56px;
+    right: 15px;
 }
 
     figure.snip1390 .profile {
